--- a/app/views/enemies/index.html.erb
+++ b/app/views/enemies/index.html.erb
@@ -19,8 +19,12 @@
     </tr>
   </table>
   <h2>Detail</h2>
-  <p v-cloak v-if="updated">更新しました</p>
-  <div v-cloak v-if="show">
+  <div v-cloak>
+  <p v-if="updated">更新しました</p>
+  <div v-if="errors.length != 0">
+    <p v-for="error in errors" class="error">{{error}}</p>
+  </div>
+  <div v-if="show">
     <p>name: <input type="text" v-model="enemyInfo.name" ></p>
     <p>hp: <input type="text" v-model.number="enemyInfo.hp"></p>
     <p>mp: <input type="text" v-model.number="enemyInfo.magic_point"></p>
