トランジション追加

--- a/app/assets/stylesheets/enemy.scss
+++ b/app/assets/stylesheets/enemy.scss
@@ -7,3 +7,14 @@
     margin: 0;
     margin-bottom: 3px;
 }
+
+.v-enter-active, .v-leave-active{
+    transition: opacity 1s;
+}
+.v-enter, .v-leave-to{
+    opacity: 0;
+}
+
+h2 span{
+    color: red;
+}
