--- a/app/views/enemies/index.html.erb
+++ b/app/views/enemies/index.html.erb
@@ -10,23 +10,25 @@
         <th v-on:click="sortBy('hp')">HP</th>
         <th v-on:click="sortBy('magic_point')">MP</th>
       </tr>
-      <tr is="enemy-item" v-for="enemy in fillterd" v-bind:enemy="enemy" v-on:click="showDetail(enemy)" v-cloak></tr>
+      <tr is="enemy-item" v-for="(enemy, index) in fillterd" v-bind:enemy="enemy" v-on:click.native="showDetail(enemy)" v-cloak :key="index"></tr>
     </tbody>
   </table>
   <p v-if="loading" v-cloak>Loading...</p>
-  <h2>Detail</h2>
+  <h2>Detail <span v-on:click="show=false" v-if="show">✖</span></h2>
   <div v-cloak>
     <p v-if="updated">更新しました</p>
     <my-error v-bind:errors="errors"></my-error>
-    <div v-if="show">
-      <p>name: <input type="text" v-model="enemyInfo.name" ></p>
-      <p>hp: <input type="text" v-model.number="enemyInfo.hp"></p>
-      <p>mp: <input type="text" v-model.number="enemyInfo.magic_point"></p>
-      <p>power: <input type="text" v-model.number="enemyInfo.power"></p>
-      <p>magic: <input type="text" v-model.number="enemyInfo.magic_power"></p>
-      <p>skill: <input type="text" v-model.number="enemyInfo.skill_power"></p>
-      <button type="button" v-on:click="updateEnemy(enemyInfo.id)">更新</button>
-    </div>
+    <transition>
+      <div v-if="show">
+        <p>name: <input type="text" v-model="enemyInfo.name" ></p>
+        <p>hp: <input type="text" v-model.number="enemyInfo.hp"></p>
+        <p>mp: <input type="text" v-model.number="enemyInfo.magic_point"></p>
+        <p>power: <input type="text" v-model.number="enemyInfo.power"></p>
+        <p>magic: <input type="text" v-model.number="enemyInfo.magic_power"></p>
+        <p>skill: <input type="text" v-model.number="enemyInfo.skill_power"></p>
+        <button type="button" v-on:click="updateEnemy(enemyInfo.id)">更新</button>
+      </div>
+    </transition>
   </div>
 </div>
 <%= javascript_pack_tag 'enemy' %>
